--- a/html/styles.scss
+++ b/html/styles.scss
@@ -58,6 +58,10 @@ $toc-font-size: 1em;
 // Code copy
 $btn-code-copy-color-active: $orange !default;
 
+// Navbar
+
+$navbar-hl: $light-orange !default;
+
 
 /*-- scss:rules --*/
 
