--- a/html/styles.scss
+++ b/html/styles.scss
@@ -157,6 +157,13 @@ $navbar-hl: $light-orange !default;
             margin-bottom: 0.5em;
             color: $gray-800;
         }
+        
+        .course-authorship {
+            font-weight: 500;
+            font-size: 1em;
+            margin-bottom: 0.5em;
+            color: $primary;
+        }
 
         .course-description {
             font-weight: 300;
